# nvfaidx

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: build-wheels.yml
pysrc/nvfaidx/: __init__.py  data.py  nvfaidx.py
rust/src/: lib.rs
