[package]
name = "nvfaidx_wrapper"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "nvfaidx_wrapper"  # The name of the library
path = "rust/src/lib.rs"        # Path to the library file

[dependencies]
pyo3 = { version = "0.18", features = ["extension-module"] }
noodles-fasta = "0.45.0"  # Update to the latest version of noodles
noodles-core = "*"
memmap2 = "*"

[package.metadata.pyo3]
name = "nvfaidx_wrapper"
