[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "nvfaidx"
readme = "README.md"
description = "Python wrapper around [noodles](https://github.com/zaeleus/noodles)."
authors = [
    { name = "BioNeMo Team", email = "bionemofeedback@nvidia.com" },
    { name = "Johannes Hingerl", email = "johannes.hingerl@tum.de" }
]
requires-python = ">=3.9"
license = { file = "LICENSE/license.txt" }
dynamic = ["version"]
dependencies = [
    # internal
    # 'bionemo-core',
    # external
]

[tool.maturin]
bindings = "pyo3"
# TODO can we provide more compatability?
compatibility = "linux"
python-source = "pysrc"
# we could make this bionemo.noodles.fasta_wrapper, but that would require it to be its own namespaced package.
module-name = "nvfaidx.nvfaidx_wrapper"
version = { file = "VERSION" }

[tool.setuptools.packages.find]
where = ["nvfaidx"]
namespaces = true
# exclude = ["test*."]

[tool.uv]
cache-keys = [{ git = true }]
